# sia

./: .dockerignore  .gitignore  Makefile  README.md  pyproject.toml
TP0/: .dockerignore  .gitignore  Dockerfile  README.md  config.json  main.py  pokemon.json
TP0/src/: pokemon.py
TP0/src/questions/: helpers.py  question_1a.py  question_1b.py  question_2a.py  question_2b.py  question_2c.py
docker/: Dockerfile  docker-compose.yml
tp1/: README.md  config.json
tp1/app/: main.py  region.py  settings.py
tp1/app/algorithms/: __init__.py  a_star.py  bfs.py  dfs.py  greedy.py  heuristic_solver.py  (+2 more)
tp2/: README.md  config.json
tp2/app/: benchmark_service.py  colors.py  crossover.py  main.py  mutation.py  selection.py  settings.py  utils.py
tp2/output/: benchmark-data.json
tp3/: README.md  config.json  graphs.excalidraw
tp3/app/: adam_optimizer.py  cross_validation.py  file_parser.py  linear_perceptron.py  main.py  multilayer_perceptron.py  non_linear_perceptron.py  perceptron.py  settings.py  simple_perceptron.py  step_perceptron.py  utils.py  visualization.py
tp3/data/: 2_with_noise.txt  3_with_noice.txt  8_with_noice.txt  digitos.txt  digits.txt  digits_with_noise.txt  ex2_with.txt  test_data.csv
tp4/: README.md  config.json
tp4/app/: PCA.py  discrete_hopfield.py  hopfield.py  kohonen.py  main.py  oja.py  parser.py  settings.py  visualization.py
tp4/data/: alphabet.txt
tp5/: README.md  config.json  mnist_parser.py  parse_dataset.py
tp5/app/: autoencoder.py  main.py  mlp.py  settings.py  utils.py  variational_autoencoder.py
tp5/data/: font.txt
(+20 files in other folders)
