[tool.poetry]
name = "sia"
version = "0.1.0"
description = ""
authors = ["Lucas Vittor <lvvittor@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
pydantic = "^1.10.6"
seaborn = "^0.12.2"
jinja2 = "^3.1.2"
dataframe-image = "^0.1.5"
func-timeout = "^4.3.5"
scikit-learn = "^1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
